// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading if no content 1`] = `
<DevotionsWithoutData
  Loading={[Function]}
  data={
    Object {
      "content": Array [],
      "loading": false,
      "refetch": [Function],
    }
  }
  dispatch={[Function]}
/>
`;

exports[`renders with props 1`] = `
<DevotionsWithoutData
  Loading={[Function]}
  data={
    Object {
      "content": Array [
        Object {},
        Object {},
      ],
      "loading": false,
      "refetch": [Function],
    }
  }
  dispatch={[Function]}
/>
`;
